--- a/app/src/main/res/layout/row_photos.xml
+++ b/app/src/main/res/layout/row_photos.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -35,22 +36,29 @@
             android:layout_height="@dimen/_70sdp"
             android:layout_gravity="center">
 
-            <ImageView
-                loadImage="@{data.path}"
-                placeholder="@{R.drawable.ic_image_placeholder}"
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="5dp"
-                android:scaleType="centerCrop" />
+                android:elevation="10dp"
+                app:cardCornerRadius="8dp">
 
-            <ImageView
-                android:id="@+id/ivCross"
-                android:layout_width="@dimen/_25sdp"
-                android:layout_height="@dimen/_25sdp"
-                android:layout_gravity="right|top"
-                android:padding="@dimen/_3sdp"
-                android:src="@drawable/ic_close_image" />
+                <ImageView
+                    loadImage="@{data.path}"
+                    placeholder="@{R.drawable.ic_image_placeholder}"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop" />
+            </androidx.cardview.widget.CardView>
 
         </FrameLayout>
+
+        <ImageView
+            android:id="@+id/ivCross"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            android:layout_gravity="right|top"
+            android:padding="@dimen/_3sdp"
+            android:src="@drawable/ic_close_image" />
     </FrameLayout>
 </layout>
