--- a/app/src/main/res/layout/fragment_other_amenities.xml
+++ b/app/src/main/res/layout/fragment_other_amenities.xml
@@ -570,7 +570,7 @@
                             android:layout_marginVertical="10dp"
                             android:layout_marginStart="@dimen/_5sdp"
                             android:fontFamily="@font/opensans_regular"
-                            android:text="@string/upload_barber_photo"
+                            android:text="@string/upload_pics"
                             android:textColor="@color/black"
                             android:textSize="@dimen/_14ssp" />
 
