--- a/app/src/main/res/layout/fragment_otp_verification.xml
+++ b/app/src/main/res/layout/fragment_otp_verification.xml
@@ -74,9 +74,9 @@
             android:cursorVisible="true"
             android:digits="1234567890"
             android:inputType="number"
-            android:maxLength="6"
+            android:maxLength="4"
             android:textIsSelectable="false"
-            android:textSize="20sp" />
+            android:textSize="@dimen/_25ssp" />
 
         <Button
             android:id="@+id/btnLoginOwner"
