--- a/app/src/main/res/layout/fragment_washroom_amenities.xml
+++ b/app/src/main/res/layout/fragment_washroom_amenities.xml
@@ -49,7 +49,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
                         android:fontFamily="@font/opensans_semibold"
-                        android:text="@string/open"
+                        android:text="@string/washroom_area"
                         android:textColor="@color/black"
                         android:textSize="@dimen/_14ssp" />
 
@@ -64,14 +64,14 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
-                            android:text="@string/yes" />
+                            android:text="@string/outdoor" />
 
                         <RadioButton
                             android:id="@+id/rbOpenNo"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:padding="@dimen/_10sdp"
-                            android:text="@string/no" />
+                            android:text="@string/indoor" />
 
                     </RadioGroup>
                 </LinearLayout>
